css/screen-words.css
.dictionary {
    display: flex;
    width: 100%;
    flex-direction: column;
}

.sort-order {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.sort-order .sort-item {
    text-decoration: none;
    min-width: 20%;
    text-align: center;
    border: 1px solid lightgray;
    margin: 2px;
    width: 30%;
    cursor: pointer;
}

.sort-order .sort-item.active {
    background-color: #EEE;
}

.entry {
    flex: auto;
    color: black;
    text-decoration: none;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.entry:nth-child(odd) {
    background-color: #D6EFF8;
}

.entry:nth-child(even) {
    background-color: rgb(239, 247, 255);
}

.header {
    border-bottom: 1px solid black;
    flex: auto;
    color: black;
    text-decoration: none;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.entry .original {
    flex-shrink: 0;
    flex-grow: 1;
    flex-basis: 30%;
    padding: 1ex;
}

.entry .tags {
    flex-shrink: 1;
    flex-grow: 1;
    font-size: 10pt;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

.entry .translation {
    flex-shrink: 0;
    flex-grow: 1;
    flex-basis: 30%;
    text-align: right;
    padding: 1ex;
}

.dictionary-container .section {
    text-align: center;
    font-size: 13px;
    color: white;
    background-color: gray;
}

.tagcloud {
    justify-content: center;
}

.tag {
    font-size: 14px;
}

.tag.active {
    background-color: yellow;
}

.dictionary .load-next {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: lightgray;
    color: white;
    height: 3em;
    border: 1px solid gray;
}

